# nc-android

./: build.gradle  debug.keystore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mxtech/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  crash.c
app/src/main/java/com/mxtech/: FirstFragment.java  LaunchActivity.kt  MainActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
crash-me/: build.gradle
crash-me/src/main/: AndroidManifest.xml
crash-me/src/main/cpp/: CMakeLists.txt  crash_me.cpp
crash-me/src/main/java/com/mxtech/: CrashMe.java
gradle/wrapper/: gradle-wrapper.properties
native-crash/: build.gradle
native-crash/src/androidTest/java/com/mxtech/: ExampleInstrumentedTest.java
native-crash/src/main/: AndroidManifest.xml
native-crash/src/main/cpp/: CMakeLists.txt  mx_native_crash_collector.c
native-crash/src/main/java/com/mxtech/: NCException.java  NativeCrashCollector.java
native-crash/src/test/java/com/mxtech/: ExampleUnitTest.java
